# bootstrap_azure

./: hosts.example  pyproject.toml  requirements.yml  site.yml
group_vars/: example_com
tf/: dns.tf  example.tfvars  main.tf  network.tf  outputs.tf  providers.tf  swarm.tf  variables.tf
