[tool.poetry]
name = "bootstrap_swarm_cluster"
version = "0.1.0"
description = ""
authors = ["Iain Hartley <iain@bitecompiler.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.3.0"
ipython = "^7.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
